Adding pretty view and the tab support

--- a/tab.html
+++ b/tab.html
@@ -34,8 +34,41 @@
   <button id="send">Send</button>
 
   <h3>Response</h3>
-  <div id="status"></div>
-  <pre id="response"></pre>
+
+  <div class="response-tabs">
+    <button class="resp-tab active" data-tab="body">Body</button>
+    <button class="resp-tab" data-tab="cookies">Cookies</button>
+    <button class="resp-tab" data-tab="headers">Headers</button>
+  </div>
+
+  <!-- BODY TAB -->
+  <div class="response-content" id="tab-body">
+    <div class="body-subtabs">
+      <button class="body-subtab active" data-subtab="pretty">Pretty</button>
+      <button class="body-subtab" data-subtab="raw">Raw</button>
+
+      <select id="pretty-mode">
+        <option value="auto">Auto</option>
+        <option value="json">JSON</option>
+        <option value="xml">XML</option>
+        <option value="html">HTML</option>
+        <option value="text">Text</option>
+      </select>
+    </div>
+    <pre id="pretty-response"></pre>
+    <pre id="raw-response" style="display: none;"></pre>
+  </div>
+
+  <!-- COOKIES TAB -->
+  <div class="response-content" id="tab-cookies" style="display: none;">
+    <pre id="cookie-response">Cookies will appear here.</pre>
+  </div>
+
+  <!-- HEADERS TAB -->
+  <div class="response-content" id="tab-headers" style="display: none;">
+    <pre id="header-response">Headers will appear here.</pre>
+  </div>
+
 
   <script src="popup.js"></script>
 </body>
