Adding import and export of all collections

--- a/tab.html
+++ b/tab.html
@@ -37,10 +37,10 @@
           <button id="add-collection-btn">Add</button>
         </div>
         <div class="button-group">
-          <input type="file" id="import-collection-file" />
-          <button id="import-collection-btn">Import</button>
+          <button id="import-collections-btn">Import Collections</button>
+          <input type="file" id="import-file-input" accept="application/json" style="display: none;">
+          <button id="export-collections-btn">Export All Collections</button>
         </div>
-        <button id="export-collections-btn">Export All Collections</button>
       </div>
       <div class="sidebar-content" id="sidebar-environments" style="display: none;">
         <h3>Environment Variables</h3>
